--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     ">
       <form style="line-height: 2px; font-size: 70%;">
         <p style="padding: 6px;"></p>
-        <p id="footerTxt">© All Rights Reserved 2022-23,</p>
+        <p id="footerTxt">© All Rights Reserved 2024,</p>
         <p id="footerTxt">Шкель Даниил, Загалов Давид</p>
         <a id="footerTxt" href="https://mail.google.com/" style="color: orange;">chumbayumba666@gmail.com</a>
       </form>
