--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
       <meta charset="utf-8">
+      <title>AtTT - Audio to Text Transcripter</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="style.css" />   <!--href="https://pyscript.net/alpha/pyscript.css"-->
       <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
@@ -70,17 +71,19 @@
             padding-left: 20%;
             text-align: center;
           ">
-            <div style="border: soled; border-width: 1px">
-              <label id="output">
-                <py-script>                                                       <!--ВЫПОЛНЕНИЕ ПИТОН КОДА (ВЫВОД ТРАНСКРИПЦИИ) -->
+            <div class="output" style="border: soled; border-width: 1px">
+              <label>
+                <p></p>
+                <py-script>                                                       <!--ВЫПОЛНЕНИЕ ПИТОН КОДА (ВЫВОД ТРАНСКРИПЦИИ) (тут будет...)-->
                   print("Тут будет ваш транскрибированный текст")
                 </py-script>
+                <p></p>
               </label>
-              <p></p>
+
             </div>
           </div>
           <div class="allTxt" style="
-            padding-top: 2%;
+            padding-top: 1%;
             padding-right: 20%;
             padding-left: 20%;
             text-align: center;
@@ -89,7 +92,7 @@
 
               <div style="border: solid; border-width: 1px;">
                 <p></p>
-                <label for="upload-audio">---> Нажмите, чтобы выбрать файл <---</label>                                                                   <!--file choser-->
+                <label for="upload-audio"> - - - - - - - - - - - - - - - - - - - - - -> Нажмите, чтобы выбрать файл <- - - - - - - - - - - - - - - - - - - - - - </label>                                                                   <!--file choser-->
                 <p></p>
               </div>
 
@@ -120,7 +123,7 @@
     ">
       <form style="line-height: 2px; font-size: 70%;">
         <p style="padding: 6px;"></p>
-        <p id="footerTxt">© All Rights Reserved 2024,</p>
+        <p id="footerTxt">© All Rights Reserved 2022-23,</p>
         <p id="footerTxt">Шкель Даниил, Загалов Давид</p>
         <a id="footerTxt" href="https://mail.google.com/" style="color: orange;">chumbayumba666@gmail.com</a>
       </form>
